Add set of visual plots

--- a/reddit_user_word_complexity_2d.ipynb
+++ b/reddit_user_word_complexity_2d.ipynb
@@ -580,6 +580,24 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Flow-native visualisations (Sinkhorn/OT coupling) + ranked barcodes\n",
+        "\n",
+        "The objects we visualise here are:\n",
+        "\n",
+        "- binary support: `M` (country×product)\n",
+        "- Sinkhorn/IPF scaling factors: `u`, `v` (dual variables)\n",
+        "- coupling / feasible flow: `W` where `W = diag(u) * M * diag(v)` (on the support)\n",
+        "\n",
+        "To avoid “hairballs”, every flow plot below supports **top-k / top-edge filtering**."
+      ],
+      "metadata": {
+        "id": "88qb5n2le32l"
+      },
+      "id": "88qb5n2le32l"
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Diagnostics: convergence\n",
@@ -627,7 +645,348 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import matplotlib as mpl\n",
+        "from matplotlib.patches import Polygon\n",
+        "from matplotlib.path import Path\n",
+        "from matplotlib.patches import PathPatch\n",
+        "\n",
+        "\n",
+        "def _to_flow_df(M: pd.DataFrame, W: np.ndarray) -> pd.DataFrame:\n",
+        "    W_df = pd.DataFrame(W, index=M.index, columns=M.columns)\n",
+        "    # keep strictly on support (in case numerical noise fills zeros)\n",
+        "    return W_df.where(M.astype(bool), other=0.0)\n",
+        "\n",
+        "\n",
+        "def _top_subset(W_df: pd.DataFrame, top_c: int = 20, top_p: int = 30, by: str = \"mass\") -> pd.DataFrame:\n",
+        "    \"\"\"Return a filtered W_df restricted to top countries/products.\n",
+        "\n",
+        "    by:\n",
+        "      - \"mass\": uses row/col sums of W_df\n",
+        "      - \"fitness_complexity\": uses global Series F/Q if present\n",
+        "    \"\"\"\n",
+        "    if by == \"fitness_complexity\" and \"F\" in globals() and \"Q\" in globals():\n",
+        "        c_idx = list(pd.Series(F).sort_values(ascending=False).index[:top_c])\n",
+        "        p_idx = list(pd.Series(Q).sort_values(ascending=False).index[:top_p])\n",
+        "    else:\n",
+        "        c_idx = list(W_df.sum(axis=1).sort_values(ascending=False).index[:top_c])\n",
+        "        p_idx = list(W_df.sum(axis=0).sort_values(ascending=False).index[:top_p])\n",
+        "    return W_df.loc[c_idx, p_idx]\n",
+        "\n",
+        "\n",
+        "def plot_circular_bipartite_flow(\n",
+        "    W_df: pd.DataFrame,\n",
+        "    max_edges: int = 350,\n",
+        "    min_edge_mass: float | None = None,\n",
+        "    color_by: str = \"country\",\n",
+        "    title: str = \"Circular bipartite flow (line-weighted, filtered)\",\n",
+        "):\n",
+        "    \"\"\"Chord-style circular bipartite flow using Bezier curves.\n",
+        "\n",
+        "    Notes:\n",
+        "    - This draws *curves* (not full ribbons) with linewidth ∝ w_cp.\n",
+        "    - Filter to top edges to avoid hairballs.\n",
+        "    \"\"\"\n",
+        "    countries = list(W_df.index)\n",
+        "    products = list(W_df.columns)\n",
+        "\n",
+        "    edges = (\n",
+        "        W_df.stack()\n",
+        "        .rename(\"w\")\n",
+        "        .reset_index()\n",
+        "        .rename(columns={\"level_0\": \"country\", \"level_1\": \"product\"})\n",
+        "    )\n",
+        "\n",
+        "    edges = edges[edges[\"w\"] > 0].sort_values(\"w\", ascending=False)\n",
+        "    if min_edge_mass is not None:\n",
+        "        edges = edges[edges[\"w\"] >= float(min_edge_mass)]\n",
+        "    edges = edges.head(max_edges)\n",
+        "\n",
+        "    if len(edges) == 0:\n",
+        "        print(\"No edges to plot after filtering.\")\n",
+        "        return\n",
+        "\n",
+        "    # angles: countries on left semicircle, products on right semicircle\n",
+        "    n_c, n_p = len(countries), len(products)\n",
+        "    theta_c = np.linspace(np.pi / 2, 3 * np.pi / 2, n_c, endpoint=False)\n",
+        "    theta_p = np.linspace(-np.pi / 2, np.pi / 2, n_p, endpoint=False)\n",
+        "\n",
+        "    def pol2cart(theta, r=1.0):\n",
+        "        return np.array([r * np.cos(theta), r * np.sin(theta)])\n",
+        "\n",
+        "    pos_c = {c: pol2cart(theta_c[i]) for i, c in enumerate(countries)}\n",
+        "    pos_p = {p: pol2cart(theta_p[j]) for j, p in enumerate(products)}\n",
+        "\n",
+        "    # colors\n",
+        "    if color_by == \"product\":\n",
+        "        cmap = plt.get_cmap(\"tab20\")\n",
+        "        colors = {p: cmap(i % 20) for i, p in enumerate(products)}\n",
+        "        edge_color = lambda row: colors[row[\"product\"]]\n",
+        "    else:\n",
+        "        cmap = plt.get_cmap(\"tab20\")\n",
+        "        colors = {c: cmap(i % 20) for i, c in enumerate(countries)}\n",
+        "        edge_color = lambda row: colors[row[\"country\"]]\n",
+        "\n",
+        "    w = edges[\"w\"].to_numpy()\n",
+        "    wmax = float(w.max())\n",
+        "    # linewidth scaling (tuned to look OK for typical normalized W)\n",
+        "    lw = 0.2 + 6.0 * (w / (wmax + 1e-30)) ** 0.75\n",
+        "\n",
+        "    fig, ax = plt.subplots(figsize=(9, 9))\n",
+        "    ax.set_aspect(\"equal\")\n",
+        "    ax.axis(\"off\")\n",
+        "\n",
+        "    # node labels (lightweight)\n",
+        "    for c in countries:\n",
+        "        x, y = pos_c[c]\n",
+        "        ax.plot([x], [y], marker=\"o\", ms=3, color=\"black\")\n",
+        "    for p in products:\n",
+        "        x, y = pos_p[p]\n",
+        "        ax.plot([x], [y], marker=\"o\", ms=3, color=\"black\")\n",
+        "\n",
+        "    # edges as cubic Beziers through center\n",
+        "    for i, row in enumerate(edges.itertuples(index=False)):\n",
+        "        c = row.country\n",
+        "        p = row.product\n",
+        "        x0, y0 = pos_c[c]\n",
+        "        x1, y1 = pos_p[p]\n",
+        "        # control points closer to center\n",
+        "        c0 = np.array([0.35 * x0, 0.35 * y0])\n",
+        "        c1 = np.array([0.35 * x1, 0.35 * y1])\n",
+        "\n",
+        "        verts = [(x0, y0), (c0[0], c0[1]), (c1[0], c1[1]), (x1, y1)]\n",
+        "        codes = [Path.MOVETO, Path.CURVE4, Path.CURVE4, Path.CURVE4]\n",
+        "        path = Path(verts, codes)\n",
+        "        patch = PathPatch(path, facecolor=\"none\", edgecolor=edge_color(row._asdict()), lw=lw[i], alpha=0.55)\n",
+        "        ax.add_patch(patch)\n",
+        "\n",
+        "    ax.set_title(title + f\"\\n(top {len(edges)} edges)\")\n",
+        "    plt.show()\n",
+        "\n",
+        "\n",
+        "def plot_alluvial_bipartite(\n",
+        "    W_df: pd.DataFrame,\n",
+        "    max_edges: int = 250,\n",
+        "    min_edge_mass: float | None = None,\n",
+        "    title: str = \"Alluvial (Sankey-style) bipartite flow (filtered)\",\n",
+        "):\n",
+        "    \"\"\"Alluvial/Sankey-style plot in pure Matplotlib.\n",
+        "\n",
+        "    Draws stacked nodes on left (countries) and right (products),\n",
+        "    with polygon bands for the largest flows.\n",
+        "    \"\"\"\n",
+        "    edges = (\n",
+        "        W_df.stack()\n",
+        "        .rename(\"w\")\n",
+        "        .reset_index()\n",
+        "        .rename(columns={\"level_0\": \"country\", \"level_1\": \"product\"})\n",
+        "    )\n",
+        "    edges = edges[edges[\"w\"] > 0].sort_values(\"w\", ascending=False)\n",
+        "    if min_edge_mass is not None:\n",
+        "        edges = edges[edges[\"w\"] >= float(min_edge_mass)]\n",
+        "    edges = edges.head(max_edges)\n",
+        "\n",
+        "    if len(edges) == 0:\n",
+        "        print(\"No edges to plot after filtering.\")\n",
+        "        return\n",
+        "\n",
+        "    countries = list(pd.Index(edges[\"country\"]).unique())\n",
+        "    products = list(pd.Index(edges[\"product\"]).unique())\n",
+        "\n",
+        "    # total mass per node (restricted to displayed edges)\n",
+        "    out_mass = edges.groupby(\"country\")[\"w\"].sum().reindex(countries)\n",
+        "    in_mass = edges.groupby(\"product\")[\"w\"].sum().reindex(products)\n",
+        "\n",
+        "    # normalize heights to 1\n",
+        "    out_mass = out_mass / out_mass.sum()\n",
+        "    in_mass = in_mass / in_mass.sum()\n",
+        "\n",
+        "    # vertical packing with padding\n",
+        "    pad = 0.01\n",
+        "\n",
+        "    def pack(masses: pd.Series):\n",
+        "        spans = {}\n",
+        "        y = 0.0\n",
+        "        for k, v in masses.items():\n",
+        "            y0 = y\n",
+        "            y1 = y + float(v)\n",
+        "            spans[k] = [y0, y1]\n",
+        "            y = y1 + pad\n",
+        "        # rescale to [0,1]\n",
+        "        total = y - pad\n",
+        "        for k in spans:\n",
+        "            spans[k][0] /= total\n",
+        "            spans[k][1] /= total\n",
+        "        return spans\n",
+        "\n",
+        "    span_c = pack(out_mass)\n",
+        "    span_p = pack(in_mass)\n",
+        "\n",
+        "    # allocate sub-spans per edge within each node\n",
+        "    c_cursor = {c: span_c[c][0] for c in countries}\n",
+        "    p_cursor = {p: span_p[p][0] for p in products}\n",
+        "\n",
+        "    cmap = plt.get_cmap(\"tab20\")\n",
+        "    c_color = {c: cmap(i % 20) for i, c in enumerate(countries)}\n",
+        "\n",
+        "    fig, ax = plt.subplots(figsize=(11, 7))\n",
+        "    ax.axis(\"off\")\n",
+        "\n",
+        "    xL, xR = 0.1, 0.9\n",
+        "    node_w = 0.03\n",
+        "\n",
+        "    # draw nodes\n",
+        "    for c in countries:\n",
+        "        y0, y1 = span_c[c]\n",
+        "        ax.add_patch(Polygon([[xL - node_w, y0], [xL, y0], [xL, y1], [xL - node_w, y1]], closed=True, color=\"black\", alpha=0.15))\n",
+        "        ax.text(xL - node_w - 0.01, (y0 + y1) / 2, str(c), ha=\"right\", va=\"center\", fontsize=8)\n",
+        "\n",
+        "    for p in products:\n",
+        "        y0, y1 = span_p[p]\n",
+        "        ax.add_patch(Polygon([[xR, y0], [xR + node_w, y0], [xR + node_w, y1], [xR, y1]], closed=True, color=\"black\", alpha=0.15))\n",
+        "        ax.text(xR + node_w + 0.01, (y0 + y1) / 2, str(p), ha=\"left\", va=\"center\", fontsize=8)\n",
+        "\n",
+        "    # bands\n",
+        "    for row in edges.itertuples(index=False):\n",
+        "        c = row.country\n",
+        "        p = row.product\n",
+        "        w = float(row.w)\n",
+        "\n",
+        "        # band thickness within each stacked node span (relative to node mass)\n",
+        "        dc = w / float(edges[edges[\"country\"] == c][\"w\"].sum()) * (span_c[c][1] - span_c[c][0])\n",
+        "        dp = w / float(edges[edges[\"product\"] == p][\"w\"].sum()) * (span_p[p][1] - span_p[p][0])\n",
+        "\n",
+        "        y0c, y1c = c_cursor[c], c_cursor[c] + dc\n",
+        "        y0p, y1p = p_cursor[p], p_cursor[p] + dp\n",
+        "        c_cursor[c] = y1c\n",
+        "        p_cursor[p] = y1p\n",
+        "\n",
+        "        # simple 4-point polygon band (looks OK with alpha)\n",
+        "        poly = Polygon(\n",
+        "            [[xL, y0c], [xR, y0p], [xR, y1p], [xL, y1c]],\n",
+        "            closed=True,\n",
+        "            facecolor=c_color[c],\n",
+        "            edgecolor=\"none\",\n",
+        "            alpha=0.45,\n",
+        "        )\n",
+        "        ax.add_patch(poly)\n",
+        "\n",
+        "    ax.set_title(title + f\"\\n(top {len(edges)} edges)\")\n",
+        "    plt.show()\n",
+        "\n",
+        "\n",
+        "def plot_dual_potential_bipartite(\n",
+        "    M: pd.DataFrame,\n",
+        "    W_df: pd.DataFrame,\n",
+        "    u: np.ndarray,\n",
+        "    v: np.ndarray,\n",
+        "    max_edges: int = 400,\n",
+        "    title: str = \"Dual potentials (log u, log v) with flow edges\",\n",
+        "):\n",
+        "    \"\"\"Layered bipartite plot: node color = dual potentials, edge thickness = w_cp.\"\"\"\n",
+        "    countries = list(M.index)\n",
+        "    products = list(M.columns)\n",
+        "\n",
+        "    phi = pd.Series(np.log(u + 1e-30), index=countries)\n",
+        "    psi = pd.Series(np.log(v + 1e-30), index=products)\n",
+        "\n",
+        "    # order by potential for a clean “landscape”\n",
+        "    c_order = list(phi.sort_values().index)\n",
+        "    p_order = list(psi.sort_values().index)\n",
+        "\n",
+        "    # pick top edges globally\n",
+        "    edges = (\n",
+        "        W_df.loc[c_order, p_order]\n",
+        "        .stack()\n",
+        "        .rename(\"w\")\n",
+        "        .reset_index()\n",
+        "        .rename(columns={\"level_0\": \"country\", \"level_1\": \"product\"})\n",
+        "    )\n",
+        "    edges = edges[edges[\"w\"] > 0].sort_values(\"w\", ascending=False).head(max_edges)\n",
+        "\n",
+        "    if len(edges) == 0:\n",
+        "        print(\"No edges to plot.\")\n",
+        "        return\n",
+        "\n",
+        "    # positions\n",
+        "    y_c = {c: i for i, c in enumerate(c_order)}\n",
+        "    y_p = {p: i for i, p in enumerate(p_order)}\n",
+        "\n",
+        "    x_c, x_p = 0.0, 1.0\n",
+        "\n",
+        "    # color mapping\n",
+        "    vals = np.concatenate([phi.to_numpy(), psi.to_numpy()])\n",
+        "    vmin, vmax = np.percentile(vals, [5, 95])\n",
+        "    norm = mpl.colors.Normalize(vmin=vmin, vmax=vmax)\n",
+        "    cmap = plt.get_cmap(\"coolwarm\")\n",
+        "\n",
+        "    fig, ax = plt.subplots(figsize=(10, 8))\n",
+        "\n",
+        "    # edges\n",
+        "    w = edges[\"w\"].to_numpy()\n",
+        "    wmax = float(w.max())\n",
+        "    lw = 0.2 + 4.5 * (w / (wmax + 1e-30)) ** 0.7\n",
+        "\n",
+        "    for i, row in enumerate(edges.itertuples(index=False)):\n",
+        "        c = row.country\n",
+        "        p = row.product\n",
+        "        ax.plot([x_c, x_p], [y_c[c], y_p[p]], color=\"black\", alpha=0.12, lw=lw[i])\n",
+        "\n",
+        "    # nodes\n",
+        "    ax.scatter([x_c] * len(c_order), [y_c[c] for c in c_order], c=[cmap(norm(phi[c])) for c in c_order], s=18, edgecolor=\"none\")\n",
+        "    ax.scatter([x_p] * len(p_order), [y_p[p] for p in p_order], c=[cmap(norm(psi[p])) for p in p_order], s=18, edgecolor=\"none\")\n",
+        "\n",
+        "    ax.set_yticks([])\n",
+        "    ax.set_xticks([x_c, x_p])\n",
+        "    ax.set_xticklabels([\"countries\", \"products\"])\n",
+        "    ax.set_title(title + f\"\\n(node color = log dual, top {len(edges)} edges)\")\n",
+        "\n",
+        "    sm = mpl.cm.ScalarMappable(norm=norm, cmap=cmap)\n",
+        "    cbar = plt.colorbar(sm, ax=ax, fraction=0.03, pad=0.02)\n",
+        "    cbar.set_label(\"dual potential (log scale)\")\n",
+        "\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n",
+        "\n",
+        "\n",
+        "def plot_ranked_barcodes(\n",
+        "    results_countries: pd.DataFrame,\n",
+        "    results_products: pd.DataFrame,\n",
+        "    top_n: int = 40,\n",
+        "    title: str = \"Ranked barcodes (Fitness/Complexity) with degree overlays\",\n",
+        "):\n",
+        "    \"\"\"Two clean rank plots: countries by Fitness, products by Complexity.\"\"\"\n",
+        "    rc = results_countries.sort_values(\"Fitness\", ascending=False).head(top_n)\n",
+        "    rp = results_products.sort_values(\"Complexity\", ascending=False).head(top_n)\n",
+        "\n",
+        "    fig, ax = plt.subplots(1, 2, figsize=(12, 4))\n",
+        "\n",
+        "    # countries\n",
+        "    ax0 = ax[0]\n",
+        "    ax0.bar(range(len(rc)), rc[\"Fitness\"].to_numpy(), color=\"black\", alpha=0.6)\n",
+        "    ax0.set_title(f\"Countries (top {len(rc)})\")\n",
+        "    ax0.set_xlabel(\"rank\")\n",
+        "    ax0.set_ylabel(\"Fitness\")\n",
+        "\n",
+        "    ax0b = ax0.twinx()\n",
+        "    ax0b.plot(range(len(rc)), rc[\"diversification_kc\"].to_numpy(), color=\"tab:blue\", lw=1.5)\n",
+        "    ax0b.set_ylabel(\"diversification (kc)\")\n",
+        "\n",
+        "    # products\n",
+        "    ax1 = ax[1]\n",
+        "    ax1.bar(range(len(rp)), rp[\"Complexity\"].to_numpy(), color=\"black\", alpha=0.6)\n",
+        "    ax1.set_title(f\"Products (top {len(rp)})\")\n",
+        "    ax1.set_xlabel(\"rank\")\n",
+        "    ax1.set_ylabel(\"Complexity\")\n",
+        "\n",
+        "    ax1b = ax1.twinx()\n",
+        "    ax1b.plot(range(len(rp)), rp[\"ubiquity_kp\"].to_numpy(), color=\"tab:orange\", lw=1.5)\n",
+        "    ax1b.set_ylabel(\"ubiquity (kp)\")\n",
+        "\n",
+        "    fig.suptitle(title)\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n"
+      ],
       "metadata": {
         "id": "9FqKvK0Vc4Zv"
       },
