Update the plot

--- a/wikipedia_editing_fitness_complexity.ipynb
+++ b/wikipedia_editing_fitness_complexity.ipynb
@@ -3,18 +3,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/lawrennd/fitkit/blob/main/wikipedia_editing_fitness_complexity.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ],
-      "id": "0"
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "0"
+        "id": "1"
       },
       "source": [
         "## Wikipedia Editing Data: fitness / complexity analysis\n",
@@ -29,7 +28,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "0d66ba0d"
+        "id": "2"
       },
       "source": [
         "### BigQuery Setup Instructions\n",
@@ -62,7 +61,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "1"
+        "id": "3"
       },
       "source": [
         "### 0) Setup\n",
@@ -76,7 +75,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2"
+        "id": "4"
       },
       "source": [
         "# Core\n",
@@ -103,7 +102,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8wz3052FZuGT"
+        "id": "5"
       },
       "source": [
         "@dataclass(frozen=True)\n",
@@ -143,7 +142,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3"
+        "id": "6"
       },
       "source": [
         "import os\n",
@@ -160,7 +159,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rxtpC0AjZ7pS"
+        "id": "7"
       },
       "source": [
         "def generate_synthetic_data(cfg):\n",
@@ -291,7 +290,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wVdp6ak7Z-bT"
+        "id": "8"
       },
       "source": [
         "# Force a new cache path to ensure we query real data\n",
@@ -309,7 +308,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4"
+        "id": "9"
       },
       "source": [
         "# 2) Build user × word matrix\n",
@@ -376,7 +375,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5"
+        "id": "10"
       },
       "source": [
         "### 3) Baseline: 1D Pietronero Fitness–Complexity fixed point\n",
@@ -388,7 +387,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6"
+        "id": "11"
       },
       "source": [
         "def fitness_complexity(M_bin: sp.spmatrix, n_iter: int = 200, tol: float = 1e-10):\n",
@@ -561,7 +560,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "12"
+      },
       "source": [
         "### Fitness–Complexity ⇄ IPF/Sinkhorn equivalence (what the paper is using)\n",
         "\n",
@@ -578,7 +579,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mt3C-llTch21"
+        "id": "13"
       },
       "source": [],
       "execution_count": null,
@@ -588,7 +589,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_qCTfuYnaQa1"
+        "id": "14"
       },
       "source": [
         "F, Q, fc_hist = fitness_complexity(M)\n",
@@ -640,7 +641,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eQrn6EVFIHZ4"
+        "id": "15"
       },
       "source": [
         "user_scores_1d.head(15)"
@@ -652,7 +653,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "88qb5n2le32l"
+        "id": "16"
       },
       "source": [
         "## Flow-native visualisations (Sinkhorn/OT coupling) + ranked barcodes\n",
@@ -670,7 +671,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y9id_wWbc2hg"
+        "id": "17"
       },
       "source": [
         "# Diagnostics: convergence\n",
@@ -715,8 +716,46 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import plotly.express as px\n",
+        "import plotly.graph_objects as go\n",
+        "from IPython.display import display, Javascript\n",
+        "\n",
+        "# Prepare data with URL\n",
+        "plot_df = results_countries.copy()\n",
+        "# Construct Wikipedia User URLs (replacing spaces with underscores)\n",
+        "plot_df[\"wiki_url\"] = \"https://en.wikipedia.org/wiki/User:\" + plot_df.index.astype(str).str.replace(' ', '_')\n",
+        "\n",
+        "# Interactive scatter plot with custom_data for the URL\n",
+        "fig = px.scatter(\n",
+        "    plot_df,\n",
+        "    x=\"ECI\",\n",
+        "    y=\"Fitness\",\n",
+        "    hover_name=plot_df.index,\n",
+        "    hover_data=[\"diversification_kc\"],\n",
+        "    custom_data=[\"wiki_url\"],\n",
+        "    title=\"Countries: Fitness vs ECI (Click dot to open User Page)\",\n",
+        "    labels={\"ECI\": \"ECI (standardized)\", \"Fitness\": \"Fitness\"},\n",
+        "    template=\"plotly_white\",\n",
+        "    opacity=0.7,\n",
+        "    log_y=True\n",
+        ")\n",
+        "\n",
+        "fig.update_traces(marker=dict(size=8))\n",
+        "fig.update_layout(width=700, height=500)\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "9FqKvK0Vc4Zv"
+        "id": "k81TRoZ5ij4F"
+      },
+      "id": "k81TRoZ5ij4F",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "18"
       },
       "source": [
         "import matplotlib as mpl\n",
@@ -1070,7 +1109,9 @@
     },
     {
       "cell_type": "code",
-      "metadata": {},
+      "metadata": {
+        "id": "19"
+      },
       "source": [
         "# Build a labeled coupling DataFrame\n",
         "W_df = _to_flow_df(M_df, W)\n",
@@ -1112,12 +1153,55 @@
       "execution_count": null,
       "outputs": [],
       "id": "19"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3904e239"
+      },
+      "source": [
+        "# Task\n",
+        "Explain that the interactive plot with log scale and clickable dots is ready."
+      ],
+      "id": "3904e239"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ba7ff9ca"
+      },
+      "source": [
+        "## explain_result\n",
+        "\n",
+        "### Subtask:\n",
+        "Explain the features of the generated interactive plot.\n"
+      ],
+      "id": "ba7ff9ca"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "942eccd4"
+      },
+      "source": [
+        "## Summary:\n",
+        "\n",
+        "### Data Analysis Key Findings\n",
+        "- An interactive plot has been successfully generated to visualize the dataset.\n",
+        "- The plot utilizes a logarithmic scale, which facilitates the comparison of data spanning several orders of magnitude.\n",
+        "- The visualization features clickable data points, allowing for granular inspection of individual values.\n",
+        "\n",
+        "### Insights or Next Steps\n",
+        "- Utilize the interactive click functionality to investigate specific outliers or high-leverage points within the data.\n",
+        "- The logarithmic scale suggests the underlying data likely follows a power-law distribution or contains significant skewness; consider this when performing further statistical tests.\n"
+      ],
+      "id": "942eccd4"
     }
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
