--- a/examples/wikipedia_editing_fitness_complexity.ipynb
+++ b/examples/wikipedia_editing_fitness_complexity.ipynb
@@ -2,7 +2,10 @@
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "64de1c3e",
       "metadata": {},
+      "outputs": [],
       "source": [
         "# Auto-install fitkit if not available (e.g., in Colab)\n",
         "try:\n",
@@ -10,22 +13,19 @@
         "except ImportError:\n",
         "    !pip install -e ..  # Install from parent directory in dev mode\n",
         "    import fitkit"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "64de1c3e"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "a9efa654",
       "metadata": {},
+      "outputs": [],
       "source": [
         "from fitkit.data import WikipediaLoader, QueryConfig, create_small_fixture\n",
         "from fitkit.algorithms import fitness_complexity, compute_eci_pci, sinkhorn_masked\n",
         "from fitkit.algorithms import FitnessComplexity, ECI, SinkhornScaler"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "a9efa654"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -34,11 +34,12 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/lawrennd/fitkit/blob/main/wikipedia_editing_fitness_complexity.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/lawrennd/fitkit/blob/main/examples/wikipedia_editing_fitness_complexity.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
+      "id": "1",
       "metadata": {
         "id": "1"
       },
@@ -49,11 +50,11 @@
         "\n",
         "- Downloads a sample of Wikipedia users from BigQuery and aggregates their edits into per-user text.\n",
         "- Builds a `user` $\\times$ `word` matrix and its *support* (analogous to `country` $\\times$ `product`).\n"
-      ],
-      "id": "1"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "2",
       "metadata": {
         "id": "2"
       },
@@ -85,11 +86,11 @@
         "    This will authenticate you and allow the `WikipediaLoader` to access BigQuery using your credentials.\n",
         "\n",
         "Once these steps are complete, you should be able to run the BigQuery cells successfully!"
-      ],
-      "id": "2"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "3",
       "metadata": {
         "id": "3"
       },
@@ -99,14 +100,16 @@
         "You’ll need BigQuery credentials configured locally (e.g. `gcloud auth application-default login`) and permission to access the public dataset `fh-bigquery.reddit_comments`.\n",
         "\n",
         "If you don’t have BigQuery access, you can still run the later cells by loading a cached dataframe (see the caching cell below).\n"
-      ],
-      "id": "3"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "4",
       "metadata": {
         "id": "4"
       },
+      "outputs": [],
       "source": [
         "# Core\n",
         "import os\n",
@@ -118,16 +121,16 @@
         "\n",
         "# Plotting\n",
         "import matplotlib.pyplot as plt\n"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "4"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "5",
       "metadata": {
         "id": "5"
       },
+      "outputs": [],
       "source": [
         "# Standard random sampling (no specific users)\n",
         "cfg = QueryConfig()\n",
@@ -142,43 +145,43 @@
         ")\n",
         "\n",
         "print(\"Cache path:\", CACHE_PATH)"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "5"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "6",
       "metadata": {
         "id": "6"
       },
+      "outputs": [],
       "source": [
         "# Data loading is now handled by WikipediaLoader (imported from fitkit.data)\n",
         "# The loader handles BigQuery authentication, querying, caching, and matrix construction\n"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "6"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "7",
       "metadata": {
         "id": "7"
       },
+      "outputs": [],
       "source": [
         "# Data loading functions are now in fitkit.data.WikipediaLoader\n",
         "# The loader handles BigQuery authentication, querying, caching, and matrix construction\n",
         "\n"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "7"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "8",
       "metadata": {
         "id": "8"
       },
+      "outputs": [],
       "source": [
         "# Load data using WikipediaLoader\n",
         "print(f\"Using cache path: {CACHE_PATH}\")\n",
@@ -194,16 +197,16 @@
         "print(f\"Loaded: {len(user_ids)} users, {len(vocab)} words\")\n",
         "print(f\"Matrix shape: {X.shape}, dtype: {X.dtype}\")\n",
         "print(f\"Matrix is sparse: {sp.issparse(X)}\")"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "8"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "9",
       "metadata": {
         "id": "9"
       },
+      "outputs": [],
       "source": [
         "# 2) Extract support matrix and prepare for analysis\n",
         "#\n",
@@ -225,13 +228,11 @@
         "\n",
         "# Labeled view for plotting and downstream helpers\n",
         "M_df = pd.DataFrame.sparse.from_spmatrix(M, index=user_ids, columns=vocab)"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "9"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "10",
       "metadata": {
         "id": "10"
       },
@@ -239,25 +240,24 @@
         "### 3) Baseline: 1D Pietronero Fitness–Complexity fixed point\n",
         "\n",
         "This is the usual nonlinear rank-1 fixed point on the **support matrix** \\(M\\) (binary incidence). We’ll compute it as a scalar reference, then move to the rank-2 extension.\n"
-      ],
-      "id": "10"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "11",
       "metadata": {
         "id": "11"
       },
+      "outputs": [],
       "source": [
         "# Algorithm functions are now imported from fitkit.algorithms\n",
-        "# (fitness_complexity, compute_eci_pci, sinkhorn_masked)\n",
-        ""
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "11"
+        "# (fitness_complexity, compute_eci_pci, sinkhorn_masked)\n"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "12",
       "metadata": {
         "id": "12"
       },
@@ -271,24 +271,26 @@
         "- Setting \\(A_u \\equiv 1/F_u\\) and \\(B_w \\equiv Q_w\\) yields \\(w_{uw} \\propto M_{uw} Q_w/F_u\\), and the FC fixed-point updates recover the scaling equations (up to the usual projective normalisation/gauge).\n",
         "\n",
         "So the Sinkhorn/IPF object here is **not a different model**—it’s the same masked matrix-scaling problem, viewed in “flow” form. The only extra modelling choice is **which marginals \\((r,c)\\)** to impose (uniform is a common default in the support-only setting; data-marginals are natural for quantitative flows).\n"
-      ],
-      "id": "12"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "13",
       "metadata": {
         "id": "13"
       },
-      "source": [],
-      "execution_count": null,
       "outputs": [],
-      "id": "13"
+      "source": []
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "14",
       "metadata": {
         "id": "14"
       },
+      "outputs": [],
       "source": [
         "F, Q, fc_hist = fitness_complexity(M)\n",
         "eci, pci = compute_eci_pci(M)\n",
@@ -331,25 +333,23 @@
         "print(word_scores_1d.head(20))\n",
         "print(\"Top 20 users by fitness:\")\n",
         "print(user_scores_1d.head(20))"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "14"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "15",
       "metadata": {
         "id": "15"
       },
+      "outputs": [],
       "source": [
         "user_scores_1d.head(15)"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "15"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "16",
       "metadata": {
         "id": "16"
       },
@@ -363,14 +363,16 @@
         "- coupling / feasible flow: `W` where `W = diag(u) * M * diag(v)` (on the support)\n",
         "\n",
         "To avoid “hairballs”, every flow plot below supports **top-k / top-edge filtering**."
-      ],
-      "id": "16"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "17",
       "metadata": {
         "id": "17"
       },
+      "outputs": [],
       "source": [
         "# Diagnostics: convergence\n",
         "fig, ax = plt.subplots(1, 2, figsize=(10, 3))\n",
@@ -407,16 +409,16 @@
         "plt.title(\"Countries: Fitness vs ECI\")\n",
         "plt.tight_layout()\n",
         "plt.show()\n"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "17"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "k81TRoZ5ij4F",
       "metadata": {
         "id": "k81TRoZ5ij4F"
       },
+      "outputs": [],
       "source": [
         "import plotly.express as px\n",
         "import plotly.graph_objects as go\n",
@@ -445,16 +447,16 @@
         "fig.update_traces(marker=dict(size=8))\n",
         "fig.update_layout(width=700, height=500)\n",
         "\n"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "k81TRoZ5ij4F"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "18",
       "metadata": {
         "id": "18"
       },
+      "outputs": [],
       "source": [
         "import matplotlib as mpl\n",
         "from matplotlib.patches import Polygon\n",
@@ -800,16 +802,16 @@
         "    fig.suptitle(title)\n",
         "    plt.tight_layout()\n",
         "    plt.show()\n"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "18"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "19",
       "metadata": {
         "id": "19"
       },
+      "outputs": [],
       "source": [
         "# Build a labeled coupling DataFrame\n",
         "W_df = _to_flow_df(M_df, W)\n",
@@ -847,24 +849,22 @@
         "\n",
         "# 4) Ranked barcode plots\n",
         "plot_ranked_barcodes(results_countries, results_products, top_n=40)\n"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "19"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "3904e239",
       "metadata": {
         "id": "3904e239"
       },
       "source": [
         "# Task\n",
         "Explain that the interactive plot with log scale and clickable dots is ready."
-      ],
-      "id": "3904e239"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "ba7ff9ca",
       "metadata": {
         "id": "ba7ff9ca"
       },
@@ -873,11 +873,11 @@
         "\n",
         "### Subtask:\n",
         "Explain the features of the generated interactive plot.\n"
-      ],
-      "id": "ba7ff9ca"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "942eccd4",
       "metadata": {
         "id": "942eccd4"
       },
@@ -892,8 +892,7 @@
         "### Insights or Next Steps\n",
         "- Utilize the interactive click functionality to investigate specific outliers or high-leverage points within the data.\n",
         "- The logarithmic scale suggests the underlying data likely follows a power-law distribution or contains significant skewness; consider this when performing further statistical tests.\n"
-      ],
-      "id": "942eccd4"
+      ]
     }
   ],
   "metadata": {
